--- a/index.html
+++ b/index.html
@@ -92,30 +92,29 @@
       <img src="assets/img/sponser.jpeg" alt="" data-aos="fade-in" class="">
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">THE ANNUAL<br><span>MARKETING</span> CONFERENCE</h2>
-        <p data-aos="fade-up" data-aos-delay="200">10-12 December, Downtown Conference Center, New York</p>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">DTAC 25 TOASTMASTERS COMPETITION<br><span>UNLEASHING THE POWER OF SPEECH</span></h2>
+        <p data-aos="fade-up" data-aos-delay="200">Join us on 11-13 May at the Crown Plaza Conference Center, Bahrain</p>
         <div data-aos="fade-up" data-aos-delay="300" class="">
-          <a href="" class="glightbox pulsating-play-btn mt-3"></a>
+          <a href="assets/video/video-dtac-23.mp4" class="glightbox pulsating-play-btn mt-3"></a>
         </div>
       </div>
+
 
       <div class="about-info mt-auto position-relative">
 
         <div class="container position-relative" data-aos="fade-up">
           <div class="row">
-            <div class="col-lg-6">
-              <h2>About The Event</h2>
-              <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-                accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-                est ut optio sequi unde.</p>
+            <div class="col-lg-8">
+              <h2>About The DTAC 25 Toastmasters Competition</h2>
+              <p>The DTAC 25 Toastmasters Competition is a celebration of public speaking excellence, where participants showcase their oratory skills and leadership potential. The event brings together passionate speakers, mentors, and audiences, fostering a community of growth and inspiration. Join us as we witness powerful speeches, inspiring stories, and the pursuit of greatness in communication.</p>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-2">
               <h3>Where</h3>
-              <p>Downtown Conference Center, New York</p>
+              <p>Crowne Plaza, Manama</p>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-2">
               <h3>When</h3>
-              <p>Monday to Wednesday<br>10-12 December</p>
+              <p>Thursday to Saturday<br>11-13 May</p>
             </div>
           </div>
         </div>
@@ -138,11 +137,11 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/speakers/speaker-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/speakers/Mohamemd-Shukri.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4><a href="speaker-details.html">Walter White</a></h4>
-                  <span>Quas alias incidunt</span>
+                  <h4><a href="speaker-details.html">Muhammad Shukri</a></h4>
+                  <span>Founder, CEO - Y Access Training Solutions</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -156,11 +155,11 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/speakers/speaker-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/speakers/Roshan-Lewis.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4><a href="speaker-details.html">Hubert Hirthe</a></h4>
-                  <span>Consequuntur odio aut</span>
+                  <h4><a href="speaker-details.html">Roshan Lewis</a></h4>
+                  <span>Director Director - GTS TRIONET WLL</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -174,11 +173,11 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <img src="assets/img/speakers/speaker-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/speakers/Ali-Shahbaz.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4><a href="speaker-details.html">Amanda Jepson</a></h4>
-                  <span>Fugiat laborum et</span>
+                  <h4><a href="speaker-details.html">Ali Shahbaz</a></h4>
+                  <span>Senior Lecturer - Bahrain Polytechnic</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -192,11 +191,11 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="assets/img/speakers/speaker-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/speakers/thob-speaker.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4><a href="speaker-details.html">William Anderson</a></h4>
-                  <span>Debitis iure vero</span>
+                  <h4><a href="speaker-details.html">Thob Speaker</a></h4>
+                  <span>Working lad</span>
                 </div>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -208,6 +207,45 @@
             </div>
           </div><!-- End Team Member -->
 
+          <div class="row gy-4">
+
+          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="member">
+              <img src="assets/img/speakers/ok-speaker.jpeg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4><a href="speaker-details.html">Ok Speaker</a></h4>
+                  <span>Working lad 2</span>
+                </div>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="member">
+              <img src="assets/img/speakers/woman-speaker.jpeg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4><a href="speaker-details.html">Woman Speaker</a></h4>
+                  <span>Working lad 3</span>
+                </div>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+        </div>
         </div>
 
       </div>
