--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Event Schedule<br></h2>
-            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            <p>Discover the exciting lineup of speeches, workshops, and activities at DTAC 25. Plan your day and don’t miss a moment of inspiration and excellence.</p>
         </div><!-- End Section Title -->
 
         <div class="container">
@@ -557,24 +557,21 @@
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Event Venue<br></h2>
-            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            <p>Experience the grandeur of DTAC 25 at the prestigious Crown venue. Located in the heart of the city, it provides the perfect setting for inspiring speeches and networking opportunities.</p>
         </div><!-- End Section Title -->
 
         <div class="container-fluid" data-aos="fade-up">
 
             <div class="row g-0">
                 <div class="col-lg-6 venue-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" style="border:0" allowfullscreen=""></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3578.5527566477913!2d50.587647975416665!3d26.243717877052323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49a5f95d2dd3f7%3A0x1f812d678dd33d05!2sCrowne%20Plaza%20Manama%20(Bahrain)%2C%20an%20IHG%20Hotel!5e0!3m2!1sen!2sbh!4v1733438507396!5m2!1sen!2sbh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
                 <div class="col-lg-6 venue-info">
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 position-relative">
-                            <h3>Downtown Conference Center, New York</h3>
-                            <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam.
-                                Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur
-                                sequi et ea suscipit enim nesciunt quia velit.</p>
+                            <h3>Crown Venue, Manama</h3>
+                            <p>Welcome to the Crown venue, the perfect setting for the DTAC 25 Toastmasters competition. Experience an inspiring atmosphere where public speaking and leadership come to life. Join us for a memorable event that celebrates the power of speech and communication.</p>
                         </div>
                     </div>
                 </div>
@@ -668,7 +665,7 @@
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Hotels</h2>
-            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            <p>Discover top-rated hotels near the Crown venue for a comfortable stay during the DTAC 25 Toastmasters competition. From luxury accommodations to budget-friendly options, we’ve curated a list of the best places to stay, ensuring a convenient and relaxing experience for all attendees.</p>
         </div><!-- End Section Title -->
 
         <div class="container">
