added liknk fr video

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p data-aos="fade-up" data-aos-delay="200">Join us on 11-13 May at the Crown Plaza Conference Center,
                 Bahrain</p>
             <div data-aos="fade-up" data-aos-delay="300" class="">
-                <a href="assets/video/video-dtac-23.mp4" class="glightbox pulsating-play-btn mt-3"></a>
+                <a href="https://www.youtube.com/watch?v=LzXozBzz4s0" class="glightbox pulsating-play-btn mt-3"></a>
             </div>
         </div>
 
