--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <img src="assets/img/ToastmastersLogoGrayscale.svg" alt="" data-aos="fade-in" class="">
 
         <div class="container d-flex flex-column align-items-center text-center mt-auto">
-            <h2 data-aos="fade-up" data-aos-delay="100" class="">DTAC 25 TOASTMASTERS COMPETITION<br><span>UNLEASHING THE POWER OF SPEECH</span>
+            <h2 data-aos="fade-up" data-aos-delay="100" class="">DISTRICT 20 TOASTMASTERS ANNUAL CONTEST<br><span>UNLEASHING THE POWER OF SPEECH</span>
             </h2>
-            <p data-aos="fade-up" data-aos-delay="200">Join us on 11-13 May at the Crown Plaza Conference Center,
+            <p data-aos="fade-up" data-aos-delay="200">Join us on 22-24 May at the Crown Plaza Conference Center,
                 Bahrain</p>
             <div data-aos="fade-up" data-aos-delay="300" class="">
                 <a href="https://www.youtube.com/watch?v=cFX64zxS60o&t=1s" class="glightbox pulsating-play-btn mt-3"></a>
