before chaing the font

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-        <img src="assets/img/ToastmastersLogoGrayscale.svg" alt="" data-aos="fade-in" class="">
+
+        <img src="assets/img/DTAC%202025.2-31.png" alt="" data-aos="fade-in" class="">
+
 
         <div class="container d-flex flex-column align-items-center text-center mt-auto">
             <h2 data-aos="fade-up" data-aos-delay="100" class="">DISTRICT 20 TOASTMASTERS ANNUAL CONTEST<br><span>UNLEASHING THE POWER OF SPEECH</span>
@@ -125,7 +127,7 @@
                     </div>
                     <div class="col-lg-2">
                         <h3>When</h3>
-                        <p>Thursday to Saturday<br>11-13 May</p>
+                        <p>Thursday to Saturday<br>22-24 May</p>
                     </div>
                 </div>
             </div>
@@ -817,9 +819,10 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 position-relative">
                             <h3>Crown Venue, Manama</h3>
-                            <p>Welcome to the Crown venue, the perfect setting for the DTAC 25 Toastmasters competition.
-                                Experience an inspiring atmosphere where public speaking and leadership come to life.
-                                Join us for a memorable event that celebrates the power of speech and communication.</p>
+                            <p>
+                                Prepare to witness the apex of public speaking excellence at the DTAC 2025 Annual Toastmasters Contest. This distinguished event is a celebration of oratory prowess, where participants exhibit their superior communication skills and demonstrate their leadership potential. It transcends a mere contest, fostering a congregation of devoted speakers, experienced mentors, and appreciative audiences, all committed to a shared journey of growth and inspiration. We invite you to join us for a series of profound speeches and inspiring narratives, and to honor the unwavering dedication to excellence in communication. Let us come together to elevate and celebrate the esteemed art of public speaking.
+
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -830,6 +833,7 @@
         <div class="container-fluid venue-gallery-container" data-aos="fade-up" data-aos-delay="100">
             <div class="row g-0">
 
+<!--
                 <div class="col-lg-3 col-md-4">
                     <div class="venue-gallery">
                         <a href="assets/img/venue-gallery/crowne-plaza-1.png" class="glightbox"
@@ -838,6 +842,7 @@
                         </a>
                     </div>
                 </div>
+-->
 
                 <div class="col-lg-3 col-md-4">
                     <div class="venue-gallery">
@@ -866,6 +871,7 @@
                     </div>
                 </div>
 
+<!--
                 <div class="col-lg-3 col-md-4">
                     <div class="venue-gallery">
                         <a href="assets/img/venue-gallery/crowne-plaza-5.png" class="glightbox"
@@ -874,7 +880,9 @@
                         </a>
                     </div>
                 </div>
+-->
 
+<!--
                 <div class="col-lg-3 col-md-4">
                     <div class="venue-gallery">
                         <a href="assets/img/venue-gallery/crowne-plaza-6.png" class="glightbox"
@@ -883,15 +891,16 @@
                         </a>
                     </div>
                 </div>
+-->
 
-                <div class="col-lg-3 col-md-4">
+<!--                <div class="col-lg-3 col-md-4">
                     <div class="venue-gallery">
                         <a href="assets/img/venue-gallery/crowne-plaza-7.png" class="glightbox"
                            data-gall="venue-gallery">
                             <img src="assets/img/venue-gallery/crowne-plaza-7.png" alt="" class="img-fluid">
                         </a>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="col-lg-3 col-md-4">
                     <div class="venue-gallery">
@@ -1216,30 +1225,55 @@
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
-            <h2>Buy Tickets<br></h2>
+            <h2>Registration is open<br></h2>
+<!--
             <p>Get tickets for attending DTAC 25</p>
+-->
         </div><!-- End Section Title -->
 
         <div class="container">
-
             <div class="row gy-4 pricing-item" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                    <h3>DTAC Ticket</h3>
+                    <h3>DTAC Fees</h3>
+                </div>
+                <div class="col-lg-6 d-flex align-items-center justify-content-center">
+                    <div class="d-flex gap-4"> <!-- Added gap for spacing -->
+                        <h4><sup>BD</sup>20</h4>
+                        <h4><sup>KWD</sup>17</h4>
+                        <h4><sup>USD</sup>55</h4>
+                    </div>
                 </div>
                 <div class="col-lg-3 d-flex align-items-center justify-content-center">
-                    <h4><sup>$</sup>55<span></span></h4>
+                    <div class="text-center">
+                        <a href="https://forms.gle/9NdUUhUweZh7RDsy9" class="buy-btn" target="_blank">Register Now</a>
+                    </div>
                 </div>
+            </div>
+            </div>
+
+<!--
+            <div class="row gy-4 pricing-item" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-3 d-flex align-items-center justify-content-center">
+                    <h3>DTAC Fees</h3>
+                </div>
+                <div class="col-lg-6 d-flex align-items-center justify-content-center">
+                    <h4><sup>$</sup>55|</h4>
+                    <h4><sup>BD</sup>20|</h4>
+                    <h4><sup>KWD</sup>17</h4>
+                </div>
+&lt;!&ndash;                <div class="col-lg-3 d-flex align-items-center justify-content-center">
                     <ul>
                         <li><i class="bi bi-check"></i> <span>3 Days for the event</span></li>
-<!--                        <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
-                        <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>-->
+&lt;!&ndash;                        <li><i class="bi bi-check"></i> <span>Nulla at volutpat diam uteera</span></li>
+                        <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>&ndash;&gt;
                     </ul>
-                </div>
+                </div>&ndash;&gt;
                 <div class="col-lg-3 d-flex align-items-center justify-content-center">
                     <div class="text-center"><a href="https://forms.gle/9NdUUhUweZh7RDsy9" class="buy-btn" target="_blank">Register Now</a></div>
                 </div>
-            </div><!-- End Pricing Item -->
+            </div>
+-->
+            <!-- End Pricing Item -->
 
 <!--            <div class="row gy-4 pricing-item featured mt-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="col-lg-3 d-flex align-items-center justify-content-center">
