added bahrain flag and change nav color on scroll

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="container position-relative" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h2>About The DTAC 25 Toastmasters Competition</h2>
+                        <h2>About The DTAC 25 Toastmasters Annual Contest</h2>
                         <p>The DTAC 25 Toastmasters Competition is a celebration of public speaking excellence, where
                             participants showcase their oratory skills and leadership potential. The event brings
                             together passionate speakers, mentors, and audiences, fostering a community of growth and
@@ -122,8 +122,8 @@
                             greatness in communication.</p>
                     </div>
                     <div class="col-lg-2">
-                        <h3>Where</h3>
-                        <p>Crowne Plaza, Manama</p>
+                        <h3>Where <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M27,4H9V28H27c2.209,0,4-1.791,4-4V8c0-2.209-1.791-4-4-4Z" fill="#ea3323"></path><path d="M10,23.2l6-2.4-6-2.4,6-2.4-6-2.4,6-2.4-6-2.4,6-2.4-6-2.4H5c-2.209,0-4,1.791-4,4V24c0,2.209,1.791,4,4,4h5l6-2.4-6-2.4Z" fill="#fff"></path><path d="M27,4H5c-2.209,0-4,1.791-4,4V24c0,2.209,1.791,4,4,4H27c2.209,0,4-1.791,4-4V8c0-2.209-1.791-4-4-4Zm3,20c0,1.654-1.346,3-3,3H5c-1.654,0-3-1.346-3-3V8c0-1.654,1.346-3,3-3H27c1.654,0,3,1.346,3,3V24Z" opacity=".15"></path><path d="M27,5H5c-1.657,0-3,1.343-3,3v1c0-1.657,1.343-3,3-3H27c1.657,0,3,1.343,3,3v-1c0-1.657-1.343-3-3-3Z" fill="#fff" opacity=".2"></path></svg></h3>
+                        <p>Kingdom of Bahrain</p>
                     </div>
                     <div class="col-lg-2">
                         <h3>When</h3>
