--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Buy Tickets</a>
+        <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Register Now</a>
 
     </div>
 </header>
@@ -95,14 +95,14 @@
     <section id="hero" class="hero section dark-background">
 
 
-        <img src="assets/img/DTAC%202025.2-31.png" alt="" data-aos="fade-in" class="">
+        <img src="assets/img/YOUTUBE.jpg" alt="" data-aos="fade-in" class="">
 
 
         <div class="container d-flex flex-column align-items-center text-center mt-auto">
-            <h2 data-aos="fade-up" data-aos-delay="100" class="">DISTRICT 20 TOASTMASTERS ANNUAL CONTEST<br><span>UNLEASHING THE POWER OF SPEECH</span>
+            <h2 data-aos="fade-up" data-aos-delay="100" class="">District 20 Toastmasters Annual Contest<br><span>UNLEASHING THE POWER OF SPEECH</span>
             </h2>
-            <p data-aos="fade-up" data-aos-delay="200">Join us on 22-24 May at the Crown Plaza Conference Center,
-                Bahrain</p>
+            <p data-aos="fade-up" data-aos-delay="200">22-24 May at the Crowne Plaza Conference Center,
+                Kingdom of Bahrain</p>
             <div data-aos="fade-up" data-aos-delay="300" class="">
                 <a href="https://www.youtube.com/watch?v=cFX64zxS60o&t=1s" class="glightbox pulsating-play-btn mt-3"></a>
             </div>
@@ -122,11 +122,11 @@
                             greatness in communication.</p>
                     </div>
                     <div class="col-lg-2">
-                        <h3>Where <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M27,4H9V28H27c2.209,0,4-1.791,4-4V8c0-2.209-1.791-4-4-4Z" fill="#ea3323"></path><path d="M10,23.2l6-2.4-6-2.4,6-2.4-6-2.4,6-2.4-6-2.4,6-2.4-6-2.4H5c-2.209,0-4,1.791-4,4V24c0,2.209,1.791,4,4,4h5l6-2.4-6-2.4Z" fill="#fff"></path><path d="M27,4H5c-2.209,0-4,1.791-4,4V24c0,2.209,1.791,4,4,4H27c2.209,0,4-1.791,4-4V8c0-2.209-1.791-4-4-4Zm3,20c0,1.654-1.346,3-3,3H5c-1.654,0-3-1.346-3-3V8c0-1.654,1.346-3,3-3H27c1.654,0,3,1.346,3,3V24Z" opacity=".15"></path><path d="M27,5H5c-1.657,0-3,1.343-3,3v1c0-1.657,1.343-3,3-3H27c1.657,0,3,1.343,3,3v-1c0-1.657-1.343-3-3-3Z" fill="#fff" opacity=".2"></path></svg></h3>
+                        <h3 style="text-transform: unset">Where <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M27,4H9V28H27c2.209,0,4-1.791,4-4V8c0-2.209-1.791-4-4-4Z" fill="#ea3323"></path><path d="M10,23.2l6-2.4-6-2.4,6-2.4-6-2.4,6-2.4-6-2.4,6-2.4-6-2.4H5c-2.209,0-4,1.791-4,4V24c0,2.209,1.791,4,4,4h5l6-2.4-6-2.4Z" fill="#fff"></path><path d="M27,4H5c-2.209,0-4,1.791-4,4V24c0,2.209,1.791,4,4,4H27c2.209,0,4-1.791,4-4V8c0-2.209-1.791-4-4-4Zm3,20c0,1.654-1.346,3-3,3H5c-1.654,0-3-1.346-3-3V8c0-1.654,1.346-3,3-3H27c1.654,0,3,1.346,3,3V24Z" opacity=".15"></path><path d="M27,5H5c-1.657,0-3,1.343-3,3v1c0-1.657,1.343-3,3-3H27c1.657,0,3,1.343,3,3v-1c0-1.657-1.343-3-3-3Z" fill="#fff" opacity=".2"></path></svg></h3>
                         <p>Kingdom of Bahrain</p>
                     </div>
                     <div class="col-lg-2">
-                        <h3>When</h3>
+                        <h3 style="text-transform: unset">When</h3>
                         <p>Thursday to Saturday<br>22-24 May</p>
                     </div>
                 </div>
