--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="hero" class="hero section dark-background">
 
 
-        <img src="assets/img/YOUTUBE.jpg" alt="" data-aos="fade-in" class="">
+        <img src="assets/img/banner.jpg" alt="" data-aos="fade-in" class="">
 
 
         <div class="container d-flex flex-column align-items-center text-center mt-auto">
