added registration.html and remove apple icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -802,7 +802,7 @@
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Event Venue<br></h2>
-            <p>Experience the grandeur of DTAC 25 at the prestigious Crown venue. Located in the heart of the city, it
+            <p>Experience the grandeur of DTAC 25 at the prestigious Crowne venue. Located in the heart of the city, it
                 provides the perfect setting for inspiring speeches and networking opportunities.</p>
         </div><!-- End Section Title -->
 
@@ -819,10 +819,10 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 position-relative">
                             <h3>Crown Venue, Manama</h3>
-                            <p>
+<!--                            <p>
                                 Prepare to witness the apex of public speaking excellence at the DTAC 2025 Annual Toastmasters Contest. This distinguished event is a celebration of oratory prowess, where participants exhibit their superior communication skills and demonstrate their leadership potential. It transcends a mere contest, fostering a congregation of devoted speakers, experienced mentors, and appreciative audiences, all committed to a shared journey of growth and inspiration. We invite you to join us for a series of profound speeches and inspiring narratives, and to honor the unwavering dedication to excellence in communication. Let us come together to elevate and celebrate the esteemed art of public speaking.
 
-                            </p>
+                            </p>-->
                         </div>
                     </div>
                 </div>
