added join our team

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <ul>
                 <li><a href="#hero" class="active">Home</a></li>
                 <li><a href="#venue">Venue</a></li>
+                <li><a href="#join-team">Join Team</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -211,6 +212,48 @@
                         Register Now
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Join Our Team Section -->
+    <section id="join-team" class="section dark-background">
+        <div class="container section-title" data-aos="fade-up">
+            <h2>Join Our Team</h2>
+            <p>Be part of something extraordinary! Join the DTAC 2025 organizing team</p>
+        </div>
+
+        <div class="container">
+            <div class="row gy-4">
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="info-item d-flex flex-column align-items-center">
+                        <i class="bi bi-people fs-1"></i>
+                        <h3>Network Growth</h3>
+                        <p>Connect with passionate individuals and expand your professional network in the Toastmasters community</p>
+                    </div>
+                </div>
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="info-item d-flex flex-column align-items-center">
+                        <i class="bi bi-trophy fs-1"></i>
+                        <h3>Leadership Experience</h3>
+                        <p>Gain valuable leadership experience by organizing one of the largest Toastmasters events in the region</p>
+                    </div>
+                </div>
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="info-item d-flex flex-column align-items-center">
+                        <i class="bi bi-star fs-1"></i>
+                        <h3>Personal Growth</h3>
+                        <p>Develop new skills, enhance your capabilities, and grow both personally and professionally</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
+                <a href="join-our-teams.html"
+                   class="buy-btn"
+                   rel="noopener noreferrer">
+                    Apply Now
+                </a>
             </div>
         </div>
     </section>
