--- a/registration.html
+++ b/registration.html
@@ -1,91 +1,228 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Registration - DTAC 2025</title>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<!--<head>-->
+<!--    <meta charset="utf-8">-->
+<!--    <meta name="theme-color" content="var(&#45;&#45;background-color)">-->
+<!--    <meta http-equiv="Content-Security-Policy" content="-->
+<!--        default-src 'self';-->
+<!--        script-src 'self' 'unsafe-inline' https:;-->
+<!--        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;-->
+<!--        font-src 'self' data: https://fonts.gstatic.com;-->
+<!--        img-src 'self' data: https:;-->
+<!--        frame-src 'self' https://www.google.com https://docs.google.com;-->
+<!--        connect-src 'self';-->
+<!--    ">-->
+<!--    <meta content="width=device-width, initial-scale=1.0" name="viewport">-->
+<!--    <title>Registration - DTAC 2025</title>-->
 
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/main.css" rel="stylesheet">
-</head>
+<!--    &lt;!&ndash; Favicons &ndash;&gt;-->
+<!--    <link href="assets/img/favicon.png" rel="icon">-->
+<!--    <link href="assets/img/favicon.png" rel="apple-touch-icon">-->
 
-<body class="index-page">
-<header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center">
-        <a href="index.html" class="logo d-flex align-items-center me-auto">
-            <img src="assets/img/logo-dtac.png" alt="">
-        </a>
-        <nav id="navmenu" class="navmenu">
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-            </ul>
-            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-        </nav>
-    </div>
-</header>
+<!--    &lt;!&ndash; Vendor CSS Files &ndash;&gt;-->
+<!--    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/aos/aos.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">-->
+<!--    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">-->
 
-<main class="main">
-    <section class="section" style="padding-top: 120px; min-height: calc(100vh - 100px);">
-        <div class="container">
-            <div class="section-title" data-aos="fade-up">
-                <h2 style="color: #ffffff !important; margin-bottom: 40px;">Registration Form</h2>
-            </div>
-        </div>
-        <div class="container d-flex justify-content-center">
-            <div class="col-lg-8">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScC5prVuD8sDqLg4lb7S3BQnagpHfLg043bs-Kn1tZ-KHsh-A/viewform?embedded=true"
-                        width="100%"
-                        height="920"
-                        frameborder="0"
-                        style="background: white; border-radius: 8px;">
-                    Loading…
-                </iframe>
-            </div>
-        </div>
-    </section>
-</main>
+<!--    &lt;!&ndash; Main CSS File &ndash;&gt;-->
+<!--    <link href="assets/css/main.css" rel="stylesheet">-->
 
-<footer id="footer" class="footer dark-background">
-    <div class="footer-top">
-        <div class="container">
-            <div class="row gy-4">
-                <div class="col-lg-4 col-md-6 footer-about">
-                    <a href="index.html" class="logo d-flex align-items-center">
-                        <span class="sitename">DTAC 2025</span>
-                    </a>
-                    <div class="footer-contact pt-3">
-                        <p><strong>Phone:</strong> <span>+973 3777 6690</span></p>
-                        <p><strong>Email:</strong> <span>reg.dtac2025@gmail.com</span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="copyright text-center">
-        <div class="container d-flex justify-content-center align-items-center">
-            <div class="social-links">
-                <a href="https://www.facebook.com/DTAC2025.Bahrain"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.instagram.com/dtac2025.bahrain/?hl=en"><i class="bi bi-instagram"></i></a>
-            </div>
-        </div>
-    </div>
-</footer>
+<!--    <style>-->
+<!--        .header {-->
+<!--            background-color: transparent !important;-->
+<!--        }-->
 
-<!-- Vendor JS Files -->
-<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="assets/vendor/aos/aos.js"></script>
-<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="assets/js/main.js"></script>
-</body>
-</html>
+<!--        .navmenu a {-->
+<!--            color: var(&#45;&#45;nav-color) !important;-->
+<!--        }-->
+
+<!--        .navmenu a:hover,-->
+<!--        .navmenu .active {-->
+<!--            color: var(&#45;&#45;nav-hover-color) !important;-->
+<!--        }-->
+
+<!--        .registration-wrapper {-->
+<!--            padding-top: 100px;-->
+<!--            background-color: var(&#45;&#45;background-color);-->
+<!--            min-height: 100vh;-->
+<!--            display: flex;-->
+<!--            flex-direction: column;-->
+<!--        }-->
+
+<!--        .form-section {-->
+<!--            flex: 1;-->
+<!--            padding: 60px 0;-->
+<!--            background: linear-gradient(rgba(0, 8, 32, 0.9), rgba(0, 8, 32, 0.9)), url('assets/img/banner.jpg');-->
+<!--            background-size: cover;-->
+<!--            background-position: center;-->
+<!--            background-attachment: fixed;-->
+<!--        }-->
+
+<!--        .section-title {-->
+<!--            margin-bottom: 40px;-->
+<!--        }-->
+
+<!--        .section-title h2 {-->
+<!--            color: var(&#45;&#45;contrast-color);-->
+<!--        }-->
+
+<!--        .section-title p {-->
+<!--            color: var(&#45;&#45;contrast-color);-->
+<!--            opacity: 0.9;-->
+<!--        }-->
+
+<!--        .form-container {-->
+<!--            max-width: 1000px; /* Reduced from 1400px */-->
+<!--            margin: 0 auto;-->
+<!--            padding: 0 20px;-->
+<!--        }-->
+
+<!--        .form-wrapper {-->
+<!--            background: var(&#45;&#45;surface-color);-->
+<!--            border-radius: 10px;-->
+<!--            box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);-->
+<!--            overflow: hidden;-->
+<!--            height: 1500px;-->
+<!--            width: 100%;-->
+<!--            max-width: 1000px; /* Added max-width */-->
+<!--            margin: 0 auto;-->
+<!--        }-->
+
+<!--        .form-wrapper iframe {-->
+<!--            width: 100%;-->
+<!--            height: 100%;-->
+<!--            border: none;-->
+<!--        }-->
+
+<!--        /* Responsive adjustments */-->
+<!--        @media (max-width: 768px) {-->
+<!--            .form-wrapper {-->
+<!--                height: 2000px;-->
+<!--            }-->
+
+<!--            .form-section {-->
+<!--                padding: 40px 0;-->
+<!--            }-->
+
+<!--            .form-container {-->
+<!--                padding: 0 15px;-->
+<!--            }-->
+<!--        }-->
+
+<!--        /* Additional styles for scrolled state */-->
+<!--        .scrolled .header {-->
+<!--            background-color: #A9B2B1 !important;-->
+<!--        }-->
+
+<!--        .scrolled .navmenu a {-->
+<!--            color: #004165 !important;-->
+<!--        }-->
+<!--    </style>-->
+<!--</head>-->
+
+<!--<body class="index-page">-->
+<!--&lt;!&ndash; Header &ndash;&gt;-->
+<!--<header id="header" class="header d-flex align-items-center fixed-top">-->
+<!--    <div class="container-fluid container-xl position-relative d-flex align-items-center">-->
+<!--        <a href="index.html" class="logo d-flex align-items-center me-auto">-->
+<!--            <img src="assets/img/logo-dtac.png" alt="DTAC Logo">-->
+<!--        </a>-->
+
+<!--        <nav id="navmenu" class="navmenu">-->
+<!--            <ul>-->
+<!--                <li><a href="index.html">Home</a></li>-->
+<!--                <li><a href="index.html#venue">Venue</a></li>-->
+<!--                <li><a href="index.html#contact">Contact</a></li>-->
+<!--            </ul>-->
+<!--            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>-->
+<!--        </nav>-->
+<!--    </div>-->
+<!--</header>-->
+
+<!--&lt;!&ndash; Main Content &ndash;&gt;-->
+<!--<main class="registration-wrapper">-->
+<!--    <section class="form-section">-->
+<!--        <div class="container section-title" data-aos="fade-up">-->
+<!--            <h2>Registration Form</h2>-->
+<!--            <p>Join us at DTAC 2025 for an unforgettable experience</p>-->
+<!--        </div>-->
+
+<!--        <div class="form-container">-->
+<!--            <div class="form-wrapper" data-aos="fade-up" data-aos-delay="100">-->
+<!--                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScC5prVuD8sDqLg4lb7S3BQnagpHfLg043bs-Kn1tZ-KHsh-A/viewform?embedded=true"></iframe>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--</main>-->
+
+<!--&lt;!&ndash; Footer &ndash;&gt;-->
+<!--<footer id="footer" class="footer dark-background">-->
+<!--    <div class="footer-top">-->
+<!--        <div class="container">-->
+<!--            <div class="row gy-4">-->
+<!--                <div class="col-lg-5 col-md-7 footer-about">-->
+<!--                    <a href="index.html" class="logo d-flex align-items-center">-->
+<!--                        <span class="sitename">DTAC 2025</span>-->
+<!--                    </a>-->
+<!--                    <div class="footer-contact pt-3">-->
+<!--                        <p class="mt-3"><strong>Phone:</strong> <span>+973 3777 6690</span></p>-->
+<!--                        <p><strong>Email:</strong> <span>reg.dtac2025@gmail.com</span></p>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="col-lg-3 col-md-4 footer-links">-->
+<!--                    <h4>Useful Links</h4>-->
+<!--                    <ul>-->
+<!--                        <li><a href="index.html">Home</a></li>-->
+<!--                        <li><a href="index.html#venue">Venue</a></li>-->
+<!--                        <li><a href="index.html#contact">Contact</a></li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+
+<!--                <div class="col-lg-4 col-md-4 footer-links">-->
+<!--                    <h4>Social Media</h4>-->
+<!--                    <div class="social-links">-->
+<!--                        <a href="https://www.facebook.com/DTAC2025.Bahrain" class="facebook">-->
+<!--                            <i class="bi bi-facebook fs-5"></i>-->
+<!--                        </a>-->
+<!--                        <a href="https://www.instagram.com/dtac2025.bahrain/" class="instagram">-->
+<!--                            <i class="bi bi-instagram fs-5"></i>-->
+<!--                        </a>-->
+<!--                        <a href="#" class="linkedin">-->
+<!--                            <i class="bi bi-linkedin fs-5"></i>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</footer>-->
+
+<!--&lt;!&ndash; Scroll Top &ndash;&gt;-->
+<!--<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">-->
+<!--    <i class="bi bi-arrow-up-short"></i>-->
+<!--</a>-->
+
+<!--&lt;!&ndash; Preloader &ndash;&gt;-->
+<!--<div id="preloader"></div>-->
+
+<!--&lt;!&ndash; Vendor JS Files &ndash;&gt;-->
+<!--<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+<!--<script src="assets/vendor/aos/aos.js"></script>-->
+<!--<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>-->
+<!--<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>-->
+
+<!--&lt;!&ndash; Initialize Features &ndash;&gt;-->
+<!--<script>-->
+<!--    AOS.init(); // Required for animations-->
+<!--    GLightbox(); // Required for lightboxes-->
+<!--</script>-->
+
+<!--&lt;!&ndash; Main JS File &ndash;&gt;-->
+<!--<script src="assets/js/main.js"></script>-->
+<!--</body>-->
+<!--</html>-->
