added contact page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <li><a href="#hero" class="active">Home</a></li>
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#join-team">Join Team</a></li>
+                <li><a href="#contest-roles" class="active">Contest Roles</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -229,21 +230,24 @@
                     <div class="info-item d-flex flex-column align-items-center">
                         <i class="bi bi-people fs-1"></i>
                         <h3>Network Growth</h3>
-                        <p>Connect with passionate individuals and expand your professional network in the Toastmasters community</p>
+                        <p>Connect with passionate individuals and expand your professional network in the Toastmasters
+                            community</p>
                     </div>
                 </div>
                 <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="info-item d-flex flex-column align-items-center">
                         <i class="bi bi-trophy fs-1"></i>
                         <h3>Leadership Experience</h3>
-                        <p>Gain valuable leadership experience by organizing one of the largest Toastmasters events in the region</p>
+                        <p>Gain valuable leadership experience by organizing one of the largest Toastmasters events in
+                            the region</p>
                     </div>
                 </div>
                 <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="info-item d-flex flex-column align-items-center">
                         <i class="bi bi-star fs-1"></i>
                         <h3>Personal Growth</h3>
-                        <p>Develop new skills, enhance your capabilities, and grow both personally and professionally</p>
+                        <p>Develop new skills, enhance your capabilities, and grow both personally and
+                            professionally</p>
                     </div>
                 </div>
             </div>
@@ -254,6 +258,44 @@
                    rel="noopener noreferrer">
                     Apply Now
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contest Roles Section -->
+    <section id="contest-roles" class="section light-background">
+        <div class="container section-title" data-aos="fade-up">
+            <h2>Contest Roles</h2>
+            <p>Join the English Education Committee and help make DTAC 2025 a success!</p>
+        </div>
+
+        <div class="container">
+            <div class="row gy-4">
+                <div class="col-lg-6" data-aos="fade-up">
+                    <div class="info-item d-flex flex-column align-items-center">
+                        <i class="bi bi-calendar-check fs-1"></i>
+                        <h3>Important Dates</h3>
+                        <div class="text-center">
+                            <p><strong>Nomination Deadline:</strong> March 10, 2025</p>
+                            <p><strong>Conference Dates:</strong> May 22-24, 2025</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="info-item d-flex flex-column align-items-center">
+                        <i class="bi bi-person-workspace fs-1"></i>
+                        <h3>Be Part of Something Great</h3>
+                        <p class="text-center">Step up, make connections, and contribute to an unforgettable event.</p>
+                        <!--                        <a href="" class="buy-btn mt-4">Apply Now</a>-->
+                    </div>
+                </div>
+                    <div class="text-center" data-aos="fade-up" data-aos-delay="400">
+                        <a href="contest-roles.html"
+                           class="buy-btn"
+                           rel="noopener noreferrer">
+                            Apply Now
+                        </a>
+                    </div>
             </div>
         </div>
     </section>
@@ -317,16 +359,16 @@
                     </ul>
                 </div>
 
-<!--
-                <div class="col-lg-3 col-md-3 footer-links">
-                    <h4>Our Services</h4>
-                    <ul>
-                        <li><a href="#">Public Speaking</a></li>
-                        <li><a href="#">Leadership Training</a></li>
-                        <li><a href="#">Workshops</a></li>
-                    </ul>
-                </div>
--->
+                <!--
+                                <div class="col-lg-3 col-md-3 footer-links">
+                                    <h4>Our Services</h4>
+                                    <ul>
+                                        <li><a href="#">Public Speaking</a></li>
+                                        <li><a href="#">Leadership Training</a></li>
+                                        <li><a href="#">Workshops</a></li>
+                                    </ul>
+                                </div>
+                -->
 
                 <div class="col-lg-4 col-md-4 footer-links">
                     <h4>Social Media</h4>
@@ -346,13 +388,13 @@
         </div>
     </div>
 
-<!--    <div class="copyright text-center">-->
-<!--        <div class="container">-->
-<!--            <div class="credits">-->
-<!--                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <!--    <div class="copyright text-center">-->
+    <!--        <div class="container">-->
+    <!--            <div class="credits">-->
+    <!--                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
 </footer>
 <!-- Scroll Top -->
 <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
