added contset roles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul>
                 <li><a href="#hero" class="active">Home</a></li>
                 <li><a href="#venue">Venue</a></li>
-                <li><a href="#join-team">Join Team</a></li>
+<!--                <li><a href="#join-team">Join Team</a></li>-->
                 <li><a href="#contest-roles" class="active">Contest Roles</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -218,6 +218,7 @@
     </section>
 
     <!-- Join Our Team Section -->
+<!--
     <section id="join-team" class="section dark-background">
         <div class="container section-title" data-aos="fade-up">
             <h2>Join Our Team</h2>
@@ -261,9 +262,10 @@
             </div>
         </div>
     </section>
+-->
 
     <!-- Contest Roles Section -->
-    <section id="contest-roles" class="section light-background">
+    <section id="contest-roles" class="section dark-background">
         <div class="container section-title" data-aos="fade-up">
             <h2>Contest Roles</h2>
             <p>Join the English Education Committee and help make DTAC 2025 a success!</p>
