--- a/join-our-teams.html
+++ b/join-our-teams.html
@@ -1,9 +1,10 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="theme-color" content="var(--background-color)">
+  <meta name="theme-color" content="var(&#45;&#45;background-color)">
   <meta http-equiv="Content-Security-Policy" content="
         default-src 'self';
         script-src 'self' 'unsafe-inline' https:;
@@ -16,18 +17,18 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Join Our Team - DTAC 2025</title>
 
-  <!-- Favicons -->
+  &lt;!&ndash; Favicons &ndash;&gt;
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
-  <!-- Vendor CSS Files -->
+  &lt;!&ndash; Vendor CSS Files &ndash;&gt;
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
+  &lt;!&ndash; Main CSS File &ndash;&gt;
   <link href="assets/css/main.css" rel="stylesheet">
 
 
@@ -36,7 +37,7 @@
     .google-form-wrapper {
       width: 100%;
       height: 1600px;
-      background-color: var(--surface-color);
+      background-color: var(&#45;&#45;surface-color);
       border-radius: 10px;
       box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
       overflow: hidden;
@@ -58,7 +59,7 @@
 </head>
 
 <body class="index-page">
-<!-- Header -->
+&lt;!&ndash; Header &ndash;&gt;
 <header id="header" class="header d-flex align-items-center fixed-top">
   <div class="container-fluid container-xl position-relative d-flex align-items-center">
     <a href="index.html" class="logo d-flex align-items-center me-auto">
@@ -76,9 +77,9 @@
   </div>
 </header>
 
-<!-- Main Content -->
+&lt;!&ndash; Main Content &ndash;&gt;
 <main class="join-team-wrapper">
-  <!-- Intro Section -  -->
+  &lt;!&ndash; Intro Section -  &ndash;&gt;
   <section class="intro-section dark-background section">
     <div class="container section-title" data-aos="fade-up">
       <h2>Join Our Team</h2>
@@ -86,7 +87,7 @@
     </div>
   </section>
 
-  <!-- Benefits Section -->
+  &lt;!&ndash; Benefits Section &ndash;&gt;
   <section class="benefits-section section light-background">
     <div class="container">
       <div class="row">
@@ -115,7 +116,7 @@
     </div>
   </section>
 
-  <!-- Application Form Section -->
+  &lt;!&ndash; Application Form Section &ndash;&gt;
   <section class="form-section">
     <div class="container section-title" data-aos="fade-up">
       <h2>Application Form</h2>
@@ -130,7 +131,7 @@
   </section>
 </main>
 
-<!-- Footer -->
+&lt;!&ndash; Footer &ndash;&gt;
 <footer id="footer" class="footer dark-background">
   <div class="footer-top">
     <div class="container">
@@ -173,27 +174,27 @@
   </div>
 </footer>
 
-<!-- Scroll Top -->
+&lt;!&ndash; Scroll Top &ndash;&gt;
 <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
   <i class="bi bi-arrow-up-short"></i>
 </a>
 
-<!-- Preloader -->
+&lt;!&ndash; Preloader &ndash;&gt;
 <div id="preloader"></div>
 
-<!-- Vendor JS Files -->
+&lt;!&ndash; Vendor JS Files &ndash;&gt;
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-<!-- Initialize Features -->
+&lt;!&ndash; Initialize Features &ndash;&gt;
 <script>
   AOS.init(); // Required for animations
   GLightbox(); // Required for lightboxes
 </script>
 
-<!-- Main JS File -->
+&lt;!&ndash; Main JS File &ndash;&gt;
 <script src="assets/js/main.js"></script>
 </body>
-</html>
+</html>-->
