--- a/contest-roles.html
+++ b/contest-roles.html
@@ -10,7 +10,7 @@
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://docs.google.com;
     font-src 'self' data: https://fonts.gstatic.com;
     img-src 'self' data: https: https://docs.google.com https://*.google.com;
-    frame-src 'self' https://www.google.com https://docs.google.com https://docs.google.com/forms/;
+    frame-src 'self' https://www.google.com https://docs.google.com;
     connect-src 'self' https://docs.google.com;
 ">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -157,11 +157,12 @@
         </div>
 
         <div class="container" style="max-width: 1000px;">
-            <div class="google-form-wrapper" data-aos="fade-up">
-                <iframe
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSdFKq4tSeWWJJJ4wwA6ouRlkVgKUOMZPFNGx1-1PCYzyYNvaw/viewform?embedded=true"
-                        title="Contest Roles Application Form">
-                </iframe>
+            <div class="text-center" id="contest-roles" data-aos="fade-up">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFKq4tSeWWJJJ4wwA6ouRlkVgKUOMZPFNGx1-1PCYzyYNvaw/viewform"
+                   class="buy-btn"
+                   target="_blank">
+                    Open Registration Form
+                </a>
             </div>
         </div>
     </section>
