change background to white

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
 
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#772432">
+    <meta name="theme-color" content="#FFFFFF">
+    <meta name="background-color" content="#FFFFFF">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="DTAC 2025">
     <meta name="apple-mobile-web-app-capable" content="yes">
