--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <!-- SEO Meta Tags -->
     <title>DTAC 2025 - District 20</title>
-    <meta name="description" content="District 20 Toastmasters Annual Contest - UNLEASHING THE POWER OF SPEECH">
-    <meta name="keywords" content="toastmasters, public speaking, contest, DTAC 2025, Bahrain">
+    <meta name="description" content="District 20 Toastmasters Annual Conference - UNLEASHING THE POWER OF SPEECH">
+    <meta name="keywords" content="toastmasters, public speaking, conference, DTAC 2025, Bahrain">
 
     <!-- Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="
@@ -76,7 +76,7 @@
                 <li><a href="#hero" class="active">Home</a></li>
                 <li><a href="#venue">Venue</a></li>
 <!--                <li><a href="#join-team">Join Team</a></li>-->
-                <li><a href="#contest-roles" class="active">Contest Roles</a></li>
+                <li><a href="#contest-roles" class="active">Conference Roles</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -95,7 +95,7 @@
 
         <div class="container d-flex flex-column align-items-center text-center mt-auto">
             <h2 data-aos="fade-up" data-aos-delay="100">
-                District 20 Toastmasters Annual Contest<br>
+                District 20 Toastmasters Annual Conference<br>
                 <span>UNLEASHING THE POWER OF SPEECH</span>
             </h2>
             <p data-aos="fade-up" data-aos-delay="200">
@@ -111,7 +111,7 @@
             <div class="container position-relative" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h2>About The DTAC 25 Toastmasters Annual Contest</h2>
+                        <h2>About The DTAC 25 Toastmasters Annual Conference</h2>
                         <p>The DTAC 25 Toastmasters Competition is a celebration of public speaking excellence, where
                             participants showcase their oratory skills and leadership potential. The event brings
                             together passionate speakers, mentors, and audiences, fostering a community of growth and
@@ -289,7 +289,7 @@
     <!-- Contest Roles Section -->
     <section id="contest-roles" class="section dark-background">
         <div class="container section-title" data-aos="fade-up">
-            <h2>Contest Roles</h2>
+            <h2>Conference Roles</h2>
             <p>Join the English Education Committee and help make DTAC 2025 a success!</p>
         </div>
 
